--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_security
 spring.datasource.username=root
 spring.datasource.password=1209
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=create
 
 spring.thymeleaf.cache=false
 
